# refactoring

./: CMakeLists.txt  calculator.cc  calculator.h  calculator.hpp  calculator_test.cc  calculator_test.cc.autosave  divideoperation.cc  divideoperation.hpp  ioperation.cc  ioperation.hpp  minusoperation.cc  minusoperation.hpp  multiplyoperation.cc  multiplyoperation.hpp  pair.cc  pair.hpp  plusoperation.cc  plusoperation.hpp  utilites.hpp
